##----------------------------------------------------------------------------
##       $Id$
##
##       Makefile for the client programs that test the ACE network services
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

## The number in AUTOMAKE_OPTIONS is the minimum required version automake
## needed to process this file.
AUTOMAKE_OPTIONS = 1.4

SUBDIRS = \
        Logger \
        Naming \
        Tokens
