##----------------------------------------------------------------------------
##       $Id$
##
##       Makefile for the client programs that test the ACE network services
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  Logger \
  Naming \
  Tokens
