##---------------------------------------------------------------------------
##       $Id$
##
##       Makefile for the ACE network services
##
##---------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  lib \
  clients \
  servers

EXTRA_DIST = ACE-netsvcs.html
